[package]
name = "femme"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["lrlna <shestak.irina@gmail.com>", "yoshuawuyts <yoshuawuyts@gmail.com"]
repository = "https://github.com/lrlna/femme"
documentation = "https://docs.rs/femme"
description = "Not just a pretty (inter)face: pretty-printer and ndjson logger for log crate."
keywords = ["pretty-printer", "ndjson", "femme", "log", "logger"]
readme = "README.md"
edition = "2018"

[dependencies]
log = { version = "0.4.7", features = ["kv_unstable"] }
async-log = "1.1.0"
console = "0.7.7"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
